--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url(/portf/bgi2.avif);
+    background-image: url(/resume/pic/bgi2.avif);
     background-size: cover;
     background-position: center;
 }
