--- a/styles.css
+++ b/styles.css
@@ -16,9 +16,10 @@ body {
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url(/resume/pic/bgi2.avif);
+    background-image: url(/resume/pic/background.jpg);
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
 }
 
 .container {
@@ -354,7 +355,7 @@ nav .fas{
 }
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(/resume/pic/phone-background.png);
+        background-image: url(/resume/pic/phone-background.jpg);
     }
     .header-text{
         margin-top: 100%;
