--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
 }
 
 .container {
-    padding: 10px 100px;
+    padding: 10px 10%;
 }
 
 nav {
@@ -100,11 +100,11 @@ nav ul li a:hover::after {
 
 }
 
-.about-col-2 {
+.about-col-2{
     flex-basis: 60%;
 }
 
-.sub-title {
+.sub-title{
     font-size: 60px;
     font-weight: 600;
     color: #fff;
@@ -281,14 +281,12 @@ nav ul li a:hover::after {
 }
 
 /* -------------------contact------------------- */
-.contact-left {
-    flex-basis: 35%;
-    margin-left: 50px;
+.contact-left{
+    flex-basis:35%;
 }
 
 .contact-right{
-    flex-basis: 60%;
-    margin-right: 30px;
+    flex-basis:60% ;
 }
 .contact-left p {
   margin-top: 30px;  
@@ -349,6 +347,7 @@ form .btn2{
 .copyright i{
     color: #ed642b;
 }
+
 /* -----css for small src----------- */
 nav .fas{
     display: none;
