--- a/styles.css
+++ b/styles.css
@@ -419,7 +419,7 @@ nav .fas{
 }
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(/resume/pic/phone-background.jpg);
+        background-image: url(/resume/pic/phone-background.png);
     }
     .header-text{
         margin-top: 100%;
