--- a/style2.css
+++ b/style2.css
@@ -5,6 +5,48 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
+  background: #080808;
+}
+header
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 40px 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 10;
+}
+header .logo
+{
+    position: relative;
+    width: 140px;
+}
+header nav
+{
+    position: relative;
+}
+header nav ul
+{
+    position: relative;
+    display: flex;
+}
+header nav ul li
+{
+    list-style: none;
+    size :50px;
+}
+header nav ul li a
+{
+    color: #fff;
+    size: 18px;
+    text-decoration: none;
+}
+header nav ul li a:hover
+{
+    color: #ed642b;
 }
 
 .container{
@@ -61,6 +103,10 @@
  text-decoration: none;
  font-weight: bolder;
  letter-spacing: 3px;
+}
+.container .box img:hover
+{
+  transform: scale(1.1);
 }
 
 @media only screen and (max-width: 769px){
